--- a/googlemapstest.html
+++ b/googlemapstest.html
@@ -16,12 +16,14 @@
     <body>
         <div id="map"></div>
         <script>
-            let map;
             function initMap() {
+                let map;
+                let uluru = {lat: -25.344, lng: 131.036};
                 map = new google.maps.Map(document.getElementById("map"), {
-                    center: {lat: -34.397, lng: 150.644},
+                    center: uluru,
                     zoom: 8
                 });
+                let uluruMarker = new google.maps.Marker({position: uluru, map: map});
             }
         </script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSyEdgNgrTxKxgC7jwSsnAm15i9N0bI5Y&callback=initMap" async defer></script>
