--- a/localmcdonalds.html
+++ b/localmcdonalds.html
@@ -5,14 +5,14 @@
     </head>
     <body>
         <p id="text">McDonalds!</p>
-        <script>
+        <script type="text/javascript">
             function getNearbyMcDonalds() {
                 var xhttp = new XMLHttpRequest();
                 xhttp.onreadystatechange = function() {
                     if (this.readyState == 4 && this.status == 200) {
-                        document.getElementById("text").innerHTML = this.responseText;
+                        alert("request successful");
                     }
-                };
+                }
                 xhttp.open("GET", "https://maps.googleapis.com/maps/api/place/findplacefromtext/json?key=AIzaSyDSyEdgNgrTxKxgC7jwSsnAm15i9N0bI5Y&input=mcdonalds&inputtype=textquery&locationbias=ipbias&fields=formatted_address", true);
                 xhttp.send();
             }
