--- a/crowdcatalog.html
+++ b/crowdcatalog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Geolocation</title>
+    <title>Crowd Catalog</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <style>
@@ -21,44 +21,37 @@
   <body>
     <div id="map"></div>
     <script>
-      var map, infoWindow;
+      var map, infoWindow, userMarker;
       function initMap() {
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: -34.397, lng: 150.644},
           zoom: 6
         });
+        userMarker = new google.maps.Marker();
+        userMarker.setMap(map);
+        userMarker.setVisible(false);
+        setInterval(function() {updateUserPosition();}, 10000);
       }
 
-      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-                              'Error: The Geolocation service failed.' :
-                              'Error: Your browser doesn\'t support geolocation.');
-        infoWindow.open(map);
-      }
-
-      function getUserPosition() {
-        infoWindow = new google.maps.InfoWindow;
+      function updateUserPosition() {
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
+            let pos = {
               lat: position.coords.latitude,
               lng: position.coords.longitude
             };
-
-            infoWindow.setPosition(pos);
-            infoWindow.setContent('Location found.');
-            infoWindow.open(map);
             map.setCenter(pos);
-            alert("Your latitude: " + pos.lat +", Your longitude: " + pos.lng);
+            userMarker.setPosition(pos);
+            userMarker.setVisible(true);
           }, function() {
-            handleLocationError(true, infoWindow, map.getCenter());
+            console.log("geolocation supported but not working");
           });
         } else {
           // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
+          console.log("geolocation not supported");
         }
       }
+
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSyEdgNgrTxKxgC7jwSsnAm15i9N0bI5Y&callback=initMap">
