--- a/crowdcatalog.html
+++ b/crowdcatalog.html
@@ -21,8 +21,9 @@
   <body>
     <div id="map"></div>
     <script>
-      var map, infoWindow, userMarker;
+      var map, infoWindow, userMarker,pos;
       function initMap() {
+        //Create Google Map and User Marker
         map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: -34.397, lng: 150.644},
           zoom: 6
@@ -30,13 +31,15 @@
         userMarker = new google.maps.Marker();
         userMarker.setMap(map);
         userMarker.setVisible(false);
-        setInterval(function() {updateUserPosition();}, 10000);
+        console.log(typeof(pos));
+        updateUserPosition();
+        getNearbyPlaces();
       }
 
       function updateUserPosition() {
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(function(position) {
-            let pos = {
+            pos = {
               lat: position.coords.latitude,
               lng: position.coords.longitude
             };
@@ -52,6 +55,28 @@
         }
       }
 
+      function getNearbyPlaces() {
+          if (typeof(pos) == "undefined") {
+              console.log("geolocation is broken")
+          } else {
+            let proxyurl = "https://cors-anywhere.herokuapp.com/"
+            let requesturl = "https://maps.googleapis.com/maps/api/place/findplacefromtext/json?key=AIzaSyDSyEdgNgrTxKxgC7jwSsnAm15i9N0bI5Y&input=mcdonalds&inputtype=textquery&locationbias=point:" + pos.lat + "," + pos.lng + "&fields=formatted_address,geometry,name";
+            let url = proxyurl + requesturl;
+            var xhttp = new XMLHttpRequest();
+            xhttp.onreadystatechange = function() {
+                if (this.readyState == 4 && this.status == 200) {
+                    alert("it worked");
+                    let parsedResponse = JSON.parse(this.responseText);
+                    console.log(parsedResponse["candidates"][0]["name"]);
+                    console.log(parsedResponse["candidates"][0]["formatted_address"]);
+                    let locationMarker = new google.maps.Marker({position: parsedResponse["candidates"][0]["geometry"]["location"], map: map})
+                    map.setCenter(pos);
+                }
+            };
+            xhttp.open("GET", url, true);
+            xhttp.send();
+          }
+      }
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSyEdgNgrTxKxgC7jwSsnAm15i9N0bI5Y&callback=initMap">
