fix not initializing businessMarkersArray

--- a/crowdcatalog.html
+++ b/crowdcatalog.html
@@ -50,6 +50,7 @@
 
     <script>
       var map, infoWindow, userMarker, pos, businessSearchResults, businessMarkersArray;
+      businessMarkersArray = []
       function initMap() {
         //Create Google Map and User Marker
         map = new google.maps.Map(document.getElementById('map'), {
