--- a/write.html
+++ b/write.html
@@ -8,9 +8,9 @@
     </style>
   </head>
   <body>
-    <link rel="stylesheet" href="spectre/dist/spectre.min.css">
-    <link rel="stylesheet" href="spectre/dist/spectre-exp.min.css">
-    <link rel="stylesheet" href="spectre/dist/spectre-icons.min.css">
+    <link rel="stylesheet" href="spectre.min.css">
+    <link rel="stylesheet" href="spectre-exp.min.css">
+    <link rel="stylesheet" href="spectre-icons.min.css">
 
     <div class="panel">
       <div class="panel-header">
