--- a/output.html
+++ b/output.html
@@ -8,9 +8,9 @@
     </style>
   </head>
   <body>
-    <link rel="stylesheet" href="spectre.min.css">
-    <link rel="stylesheet" href="spectre-exp.min.css">
-    <link rel="stylesheet" href="spectre-icons.min.css">
+    <link rel="stylesheet" href="spectre/dist/spectre.min.css">
+    <link rel="stylesheet" href="spectre/dist/spectre-exp.min.css">
+    <link rel="stylesheet" href="spectre/dist/spectre-icons.min.css">
 
     <div class="panel">
       <div class="panel-header">
@@ -22,69 +22,65 @@
       <div class="panel-body">
         <form class="form-horizontal">
       <!-- Social Distance -->
-        <div class="form-group">
-          <div class="col-3 col-sm-12">
-            <label class="form-label" for="input-example-1">Were Social Distancing Guidelines Followed?</label>
+          <div class="form-group">
+            <div class="col-3 col-sm-12">
+              <label class="form-label" for="input-example-1">Were Social Distancing Guidelines Followed?</label>
+            </div>
+            <div class="col-9 col-sm-12">
+             <p id = "socialDistance_answer"></p>
+            </div>
           </div>
-          <div class="col-9 col-sm-12">
-           <p id = "socialDistance_answer"></p>
+          <!-- Sanitary -->
+          <div class="form-group">
+            <div class="col-3 col-sm-12">
+              <label class="form-label" for="input-example-1">How Sanitary Was the store?</label>
+            </div>
+            <div class="col-9 col-sm-12">
+              <p id = "sanitary_answer"></p>
+            </div> 
           </div>
-        </div>
-        <!-- Sanitary -->
-        <div class="form-group">
-          <div class="col-3 col-sm-12">
-            <label class="form-label" for="input-example-1">How Sanitary Was the store?</label>
+          <!-- Safeness -->
+          <div class="form-group">
+            <div class="col-3 col-sm-12">
+              <label class="form-label" for="input-example-1">How safe did you feel?</label>
+            </div>
+            <div class="col-9 col-sm-12">
+              <p id = "safeness_answer"></p>
+            </div>
           </div>
-          <div class="col-9 col-sm-12">
-            <p id = "sanitary_answer"></p>
-          </div> 
-        </div>
-        <!-- Safeness -->
-        <div class="form-group">
-          <div class="col-3 col-sm-12">
-            <label class="form-label" for="input-example-1">How safe did you feel?</label>
+          <!-- Wait Time -->
+          <div class="form-group">
+            <div class="col-3 col-sm-12">
+              <label class="form-label" for="input-example-1">Approximately how long did you wait?</label>
+            </div>
+            <div class="col-9 col-sm-12">
+             <p id = "waitTime_answer"></p>
+            </div>
           </div>
-          <div class="col-9 col-sm-12">
-            <p id = "safeness_answer"></p>
+          <!-- Masks -->
+          <div class="form-group">
+            <div class="col-3 col-sm-12">
+              <label class="form-label" for="input-example-1">Who Wore a Mask?</label>
+            </div>
+            <div class="col-9 col-sm-12">
+              <p id = "masks_answer"></p>
+            </div>
           </div>
-        </div>
-        <!-- Wait Time -->
-        <div class="form-group">
-          <div class="col-3 col-sm-12">
-            <label class="form-label" for="input-example-1">Approximately how long did you wait?</label>
-          </div>
-          <div class="col-9 col-sm-12">
-           <p id = "waitTime_answer"></p>
-          </div>
-        </div>
-        <!-- Masks -->
-        <div class="form-group">
-          <div class="col-3 col-sm-12">
-            <label class="form-label" for="input-example-1">Who Wore a Mask?</label>
-          </div>
-          <div class="col-9 col-sm-12">
-            <p id = "masks_answer"></p>
-          </div>
-        </div>
-      
           
-        <!-- Extra Info -->
-        <div class="form-group">
-          <div class="col-3 col-sm-12">
-            <label class="form-label" for="input-example-1">Anything else?</label>
-          </div>
+          <!-- Extra Info -->
+          <div class="form-group">
+            <div class="col-3 col-sm-12">
+              <label class="form-label" for="input-example-1">Anything else?</label>
+            </div>
             <div class="col-9 col-sm-12">
               <p id = "extraInfo_answer"></p>
             </div>        
           </div>
         </form>
-        </div>
-        <div class="panel-footer">
-          <button class="btn btn-primary">Go Back</button>
-        </div>
       </div>
-    </form>
-    <script>
-    </script>
+      <div class="panel-footer">
+        <button class="btn btn-primary">Go Back</button>
+      </div>
+    </div>
   </body>
 </html>
